[package]
name = "knukki"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
golem_rendering = ["golem"]
wrapper = ["glutin", "glow"]

[[example]]
name = "circle_dragging"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "color_clicking"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "color_clicking_menu"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "color_changing_rect"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "partial_color_changing_rect"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "color_changing_rect_menu"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "hover_color_circle"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "hover_color_circle_menu"
required-features = ["golem_rendering", "wrapper"]

[[example]]
name = "hover_color_circle_grid"
required-features = ["golem_rendering", "wrapper"]

[dependencies]
golem = { git = "https://github.com/ryanisaacg/golem.git", optional = true }
glutin = { version = "0.22.0", optional = true }
glow = { version = "0.4.0", optional = true }