[package]
name = "knukki"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
golem_rendering = ["golem"]
wrapper = ["glutin", "glow", "wasm-bindgen", "web-sys", "console_error_panic_hook", "console_log", "serde", "serde_json"]

[dependencies]
golem = { git = "https://github.com/ryanisaacg/golem.git", optional = true }
unicode-segmentation = "*"
ttf-parser = "*"
ab_glyph = "*"
log = "*"
png = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.22.0", optional = true }
glow = { version = "0.4.0", optional = true }
font-kit = "*"
pathfinder_geometry = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = { version = "0.4.0", features = ["web-sys"], optional = true }
wasm-bindgen = { version = "*", features = ["serde-serialize"], optional = true }
console_error_panic_hook = { version = "*", optional = true }
console_log = { version = "*", optional = true }
serde = { version = "*", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "*"
features = [
    "console", "Document", "Window",
    "HtmlCanvasElement", "HtmlElement", "Element", "CssStyleDeclaration",
    "Event", "MouseEvent",
    "WebGlRenderingContext", "CanvasRenderingContext2d", "ImageData"
]
optional = true