[package]
name = "character-playground"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
knukki = { path = "../../", default-features = false, features = ["golem_rendering", "wrapper"] }
golem = { git = "https://github.com/ryanisaacg/golem.git" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"